syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.inventory.grpc";
option java_outer_classname = "InventoryProto";

message ProductRequest {
  string name = 1;
  int64 categoryId = 2;
  double price = 3;
  int32 quantity = 4;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  string category = 3;
  double price = 4;
  int32 quantity = 5;
}

message Id { int64 id = 1; }
message SearchQuery { string q = 1; }

message ProductList { repeated ProductResponse items = 1; }

service ProductServiceGrpc {
  rpc Create(ProductRequest) returns (ProductResponse);
  rpc Get(Id) returns (ProductResponse);
  rpc Search(SearchQuery) returns (ProductList);
}
